--- a/View/homeViewer.html
+++ b/View/homeViewer.html
@@ -14,10 +14,10 @@
         <a href="" class="logo"><span>agency</span>
         <nav class="navbar">
             <a href="#">MENU NEWS</a>
-            <a href="contant">contant</a>
-            <a href="viewer">viewer</a>
-            <a href="editor">editor</a>
-            <a href="home">home</a>
+            <a href="#">contant</a>
+            <a href="#">viewer</a>
+            <a href="#">editor</a>
+            <a href="#">home</a>
         </nav>
         <div class="icon">
            <i class="fas fa-search" onclick="showbar()" id="search-btn"></i>
